Recycle activity now reusable, books can be updated or deleted

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,12 @@
 <resources>
     <string name="app_name">QA Info mate</string>
+    <string-array name="categories">
+        <item>Book Category</item>
+        <item>Programming</item>
+        <item>Management</item>
+        <item>Biology</item>
+        <item>Web Development</item>
+        <item>Networking</item>
+        <item>User Experience</item>
+    </string-array>
 </resources>
